[package]
name = "c_vec"
version = "1.2.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "Structures to wrap C arrays"
repository = "https://github.com/GuillaumeGomez/c_vec-rs.git"
readme = "README.md"
keywords = ["c", "vec", "c_vec", "array"]
license = "Apache-2.0/MIT"

[lib]
name = "c_vec"

[dev-dependencies]
libc = "0.2"
